--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bookstore",
   "version": "0.1.0",
   "private": false,
-  "homepage": "https://jafestro.github.io/bookstore-react",
+  "homepage": "https://jafestro.github.io/Bookstore-React",
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
@@ -20,7 +20,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b master -d build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
